Поменял комментарии в коде и документацию
- Также поудалял то что забыл до этого относящееся к старой логике сервиса
