# internal/controller/http/router.go
@@ -8,7 +8,7 @@ import (
 	"github.com/evrone/go-clean-template/config"
 	_ "github.com/evrone/go-clean-template/docs" // Swagger docs.
 	"github.com/evrone/go-clean-template/internal/controller/http/middleware"
-	v2 "github.com/evrone/go-clean-template/internal/controller/http/v2"
+	v1 "github.com/evrone/go-clean-template/internal/controller/http/v1"
 	"github.com/evrone/go-clean-template/internal/usecase"
 	"github.com/evrone/go-clean-template/pkg/logger"
 	"github.com/gofiber/fiber/v2"
@@ -18,7 +18,7 @@ import (
 // NewRouter -.
 // Swagger spec:
 // @title       Go Clean Template API
-// @description Using a translation service as an example
+// @description Using a comment service as an example
 // @version     1.0
 // @host        localhost:8080
 // @BasePath    /v1
@@ -43,8 +43,8 @@ func NewRouter(app *fiber.App, cfg *config.Config, t usecase.Comment, l logger.I
 	app.Get("/healthz", func(ctx *fiber.Ctx) error { return ctx.SendStatus(http.StatusOK) })
 
 	// Routers
-	apiV2Group := app.Group("/v2")
+	apiV1Group := app.Group("/v1")
 	{
-		v2.NewTranslationRoutes(apiV2Group, t, l)
+		v1.NewTranslationRoutes(apiV1Group, t, l)
 	}
 }
